@@ -1,0 +1,5 @@
+<?php
+function testRuleAppliesToFunctionWithEvalExpression()
+{
+    eval('$a = 42;');
+}
