@@ -1,0 +1,8 @@
+<?php
+class testRuleAppliesToMethodWithEvalExpression
+{
+    protected function testRuleAppliesToMethodWithEvalExpression()
+    {
+        eval('$a = 42;');
+    }
+}
