@@ -1,0 +1,8 @@
+<?php
+class testRuleNotAppliesToMethodWithoutEvalExpression
+{
+    public function testRuleNotAppliesToMethodWithoutEvalExpression()
+    {
+        echo __METHOD__;
+    }
+}
